[project]
name = "odoo-bringout-oca-ocb-stock"
version = "16.0.0"
description = "Inventory - Manage your stock and logistics activities"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo-bringout-oca-ocb-product>=16.0.0",
    "odoo-bringout-oca-ocb-barcodes_gs1_nomenclature>=16.0.0",
    "odoo-bringout-oca-ocb-digest>=16.0.0",
    "requests>=2.25.1"
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://github.com/bringout/odoo-bringout-oca-ocb-stock"
repository = "https://github.com/bringout/odoo-bringout-oca-ocb-stock"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["stock"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
